--- a/docs/ref/mlStyle.css
+++ b/docs/ref/mlStyle.css
@@ -1,35 +1,54 @@
-﻿body
-{
-	background-color: #F1F8E7;
-}
-a
-{
-text-decoration:none;
+﻿body {
+    background-color: #F1F8E7;
 }
 
-#overDiv
-{
-padding-left: 10px;
+a {
+    text-decoration: none;
 }
 
-gotop
-{
-    position:fixed;right:0px;bottom:0px;
+#overDiv {
+    padding-left: 10px;
 }
 
-li
-{
-	LIST-STYLE-TYPE: none; DISPLAY: inline; LIST-STYLE-IMAGE: none; LINE-HEIGHT:30px; 
+gotop {
+    position: fixed;
+    right: 0px;
+    bottom: 0px;
 }
-.page-navi{
-	         font-weight: bold;text-align: center;width:84%;BORDER-BOTTOM: #999 1px solid; BORDER-LEFT: #999 1px solid; PADDING-BOTTOM: 1px; MARGIN: 6px 2px; PADDING-LEFT: 6px; PADDING-RIGHT: 6px; DISPLAY: inline-block; BACKGROUND: #eff2fb; COLOR: #0000ff; FONT-SIZE: 14px; BORDER-TOP: #999 1px solid; BORDER-RIGHT: #999 1px solid; TEXT-DECORATION: none; PADDING-TOP: 1px;
+
+li {
+    LIST-STYLE-TYPE: none;
+    DISPLAY: inline;
+    LIST-STYLE-IMAGE: none;
+    LINE-HEIGHT: 30px;
 }
+
+.page-navi {
+    font-weight: bold;
+    text-align: center;
+    width: 84%;
+    BORDER-BOTTOM: #999 1px solid;
+    BORDER-LEFT: #999 1px solid;
+    PADDING-BOTTOM: 1px;
+    MARGIN: 6px 2px;
+    PADDING-LEFT: 6px;
+    PADDING-RIGHT: 6px;
+    DISPLAY: inline-block;
+    BACKGROUND: #eff2fb;
+    COLOR: #0000ff;
+    FONT-SIZE: 14px;
+    BORDER-TOP: #999 1px solid;
+    BORDER-RIGHT: #999 1px solid;
+    TEXT-DECORATION: none;
+    PADDING-TOP: 1px;
+}
+
 .page-navi:hover {
-	BACKGROUND: #f7be81; COLOR: #b40404;
+    BACKGROUND: #f7be81;
+    COLOR: #b40404;
 }
 
-h1
-{
+h1 {
     text-align: center;
     display: block;
     font-size: 20px;
@@ -37,227 +56,207 @@ h1
     font-family: "微软雅黑";
 }
 
-.note
-{
-     margin-left: 1em;
-     margin-right: 1em;
+.note {
+    margin-left: 1em;
+    margin-right: 1em;
 }
 
-.note_back
-{
+.note_back {
     font-weight: bolder;
 }
 
-h2 
-{
+h2 {
     display: block;
     font-size: 18px;
     font-weight: bolder;
     font-family: "微软雅黑";
 }
 
-h3 
-{
+h3 {
     text-align: center;
     font-size: 18px;
     font-weight: bolder;
     font-family: "微软雅黑";
 }
 
-hr
-{
- margin:10px 5px 10px 10px; border-top:1px solid #008000;
+hr {
+    margin: 10px 5px 10px 10px;
+    border-top: 1px solid #008000;
 }
 
 
-.hh
-{
-	color : #800000;
+.hh {
+    color: #800000;
     text-align: right;
     display: block;
-	font-size: 0.75em;
-}
-  
-.abreak
-{
-    page-break-after : always;
+    font-size: 0.75em;
 }
 
-.bbreak
-{
-    page-break-before : always;
+.abreak {
+    page-break-after: always;
 }
 
-.zjsjchapter
-{
+.bbreak {
+    page-break-before: always;
+}
+
+.zjsjchapter {
     color: blue;
     font-weight: bolder;
     font-size: 1.1em;
 }
 
-.chapterBreak 
-{
+.chapterBreak {
     display: block;
     line-height: 1.2em;
 }
 
-sup 
-{
-    color : Red;
-	font-size: 11px;
+sup {
+    color: Red;
+    font-size: 11px;
 }
 
 .verse {
     font-weight: bolder
 }
 
-.AA
-{
+.AA {
     font-size: 18px;
     line-height: 20px;
-    text-align:justify;
-    padding:4px 2px 4px 5px;
+    text-align: justify;
+    padding: 4px 2px 4px 5px;
 }
 
-.BB
-{
+.BB {
     text-align: center;
     font-weight: bolder;
-	font-size: 18px;
-	font-family: "微软雅黑";
+    font-size: 18px;
+    font-family: "微软雅黑";
 
 }
 
-.CC
-{
+.CC {
     text-align: center;
     font-weight: bolder;
-	font-size: 1.2em;
-	font-family: "微软雅黑";
+    font-size: 1.2em;
+    font-family: "微软雅黑";
 
 }
 
-.DD
-{
-	font-size: 9px;
-	font-family: "楷体";
+.DD {
+    font-size: 9px;
+    font-family: "楷体";
 
 }
 
 
-.O0
-{
+.O0 {
     margin-bottom: 12pt;
-	color : #000;
-	line-height: 14pt;
+    color: #000;
+    line-height: 14pt;
     display: block;
-	font-size: 18px;
-	padding:0px 0px 0px 5px;
+    font-size: 18px;
+    padding: 0px 0px 0px 5px;
 }
 
-.O1
-{
+.O1 {
     margin-bottom: 12pt;
-	line-height: 14pt;
-	color : #2f3699;
+    line-height: 14pt;
+    color: #2f3699;
     display: block;
-	font-size: 14px;
-	padding:0px 0px 0px 5px;
+    font-size: 14px;
+    padding: 0px 0px 0px 5px;
 }
 
-.O2
-{
+.O2 {
     margin-bottom: 12pt;
-	line-height: 14pt;
-	color : #008080;
+    line-height: 14pt;
+    color: #008080;
     display: block;
-	font-size: 14px;
-	padding:0px 0px 0px 5px;
+    font-size: 14px;
+    padding: 0px 0px 0px 5px;
 }
 
-.O3
-{
+.O3 {
     margin-bottom: 12pt;
-	line-height: 14pt;
-	color :#990030;
+    line-height: 14pt;
+    color: #990030;
     display: block;
-	font-size: 13px;
-	padding:0px 0px 0px 5px;
+    font-size: 13px;
+    padding: 0px 0px 0px 5px;
 }
 
-.O4
-{
+.O4 {
     margin-bottom: 12pt;
-	line-height: 14pt;
-	color : #1c672f;
+    line-height: 14pt;
+    color: #1c672f;
     display: block;
-	font-size: 12px;
-	padding:0px 0px 0px 5px;
+    font-size: 12px;
+    padding: 0px 0px 0px 5px;
 }
-.O5
-{
+
+.O5 {
     margin-bottom: 12pt;
-	line-height: 14pt;
-	color : #970093;
+    line-height: 14pt;
+    color: #970093;
     display: block;
-	font-size: 12px;
-	padding:0px 0px 0px 5px;
+    font-size: 12px;
+    padding: 0px 0px 0px 5px;
 }
-.O9
-{
+
+.O9 {
     margin-bottom: 12pt;
-	line-height: 28pt;
-	color : #800000;
+    line-height: 28pt;
+    color: #800000;
     text-align: center;
     display: block;
-	font-size: 16px;
+    font-size: 16px;
     font-weight: bolder;
 }
-.fd
-{
+
+.fd {
     margin-bottom: 12pt;
-	color : #0000FF;
+    color: #0000FF;
     display: block;
     font-weight: bolder;
-	font-size: 18px;
+    font-size: 18px;
     text-align: left;
-	padding:0px 0px 0px 5px;
+    padding: 0px 0px 0px 5px;
 }
 
-.cd-top
-{
-  display: inline-block;
-  height: 40px;
-  width: 40px;
-  position: fixed;
-  bottom: 40px;
-  right: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
-  /* image replacement properties */
-  overflow: hidden;
-  text-indent: 100%;
-  white-space: nowrap;
-  background: rgba(10, 200, 10, 0.5) url(images/cdtoparrow.html) no-repeat center 50%;
-  visibility: hidden;
-  opacity: 0;
-  -webkit-transition: all 0.3s;
-  -moz-transition: all 0.3s;
-  transition: all 0.3s;
+.cd-top {
+    display: inline-block;
+    height: 40px;
+    width: 40px;
+    position: fixed;
+    bottom: 40px;
+    right: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
+    /* image replacement properties */
+    overflow: hidden;
+    text-indent: 100%;
+    white-space: nowrap;
+    background: rgba(10, 200, 10, 0.5) url(images/cdtoparrow.html) no-repeat center 50%;
+    visibility: hidden;
+    opacity: 0;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    transition: all 0.3s;
 }
-.cd-top.cd-is-visible
-{
-  /* the button becomes visible */
-  visibility: visible;
-  opacity: 1;
+
+.cd-top.cd-is-visible {
+    /* the button becomes visible */
+    visibility: visible;
+    opacity: 1;
 }
-.cd-top.cd-fade-out
-{
-  /* 如果用户继续向下滚动,这个按钮的透明度会变得更低#e86256 */
-  opacity: .5;
+
+.cd-top.cd-fade-out {
+    /* 如果用户继续向下滚动,这个按钮的透明度会变得更低#e86256 */
+    opacity: .5;
 }
-.no-touch .cd-top:hover
-{
-  background-color: #e86256;
-  opacity: 1;
+
+.no-touch .cd-top:hover {
+    background-color: #e86256;
+    opacity: 1;
 }
 
